# mono-tools

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.am.in  README  TODO  autogen.sh  configure.in  makefile  makefile.gnu  makefile.inc  mono-tools.spec.in  subdirs
Mono.Profiler/Mono.Profiler.Widgets/: AllocationsStore.cs  AllocationsView.cs  AssemblyInfo.cs  CallsStore.cs  CallsView.cs  ChangeLog  History.cs  Makefile.am  Mono.Profiler.Widgets.csproj  Node.cs  ProfileConfiguration.cs  ProfileOptions.cs  ProfileSetupDialog.cs  ProfileStore.cs  ProfileView.cs  ProfilerProcess.cs  StartPage.cs  StatDetail.cs  StatList.cs  StatStore.cs  StatView.cs
Mono.Profiler/heap-snapshot-explorer/: AssemblyInfo.cs  ChangeLog  HeapExplorerActions.cs  HeapExplorerTreeModel.cs  HeapSnapshotExplorer.cs  LoadedClassChooser.cs  Main.cs  MainWindow.cs  Makefile.am  MyClass.cs  heap-snapshot-explorer.csproj  heap-snapshot-explorer.mdp
Mono.Profiler/heap-snapshot-viewer/: AssemblyInfo.cs  ChangeLog  Main.cs  MainWindow.cs  Makefile.am  app.desktop  heap-snapshot-viewer.csproj  heap-snapshot-viewer.mdp  mprof-heap-viewer.in
Mono.Profiler/mprof-gui/: AssemblyInfo.cs  ChangeLog  Main.cs  MainWindow.cs  Makefile.am  emveepee.in  mprof-gui.csproj
Mono.Profiler/profiler-decoder-library/: BaseTypes.cs  ChangeLog  Decoder.cs  EventProcessor.cs  Makefile.am  NativeLibraryReader.cs  ObjectModel.cs  Reader.cs  profiler-decoder-library.csproj  profiler-decoder-library.mdp
Mono.Profiler/profiler-file-decoder/: ChangeLog  Main.cs  Makefile.am  mprof-decoder.in  profiler-file-decoder.csproj  profiler-file-decoder.mdp
asn1view/gtk/: .gitignore  Main.cs  Makefile.am  gui.glade
create-native-map/src/: Makefile.am  MapAttribute.cs  TestMap.cs  create-native-map.cs  test-overflow.c  test-overflow.h  test.c.ref  test.cs.ref  test.h.ref  test.xml.ref
docbrowser/: .gitignore  AddBookmarkDialog.glade  AssemblyInfo.cs.in  BookmarkManager.cs  BookmarksManager.glade  Browser.glade  BrowserWidget.cs  ChangeLog  Contributions.cs  Driver.cs  DummyHtmlRender.cs  GeckoHtmlRender.cs  GeckoHtmlRender.csproj  GtkHtmlHtmlRender.cs  GtkHtmlHtmlRender.csproj  HtmlRender.cs  IHtmlRender.cs  IndexBrowser.cs  Lookup.glade  Makefile.am  MonoWebBrowserHtmlRender.cs  MonoWebBrowserHtmlRender.csproj  PrintManager.cs  ProgressPanel.cs  README  README.ADMIN  Tab.cs  TreeBrowser.cs  WebKitHtmlRender.cs  WebKitHtmlRender.csproj  admin.cs  admin.csproj  admin.glade  browser.cs  browser.glade  docbrowser.csproj  docbrowser.sln  editing.cs  elabel.cs  gtkhtml-osx.patch  (+5 more)
docbrowser/macbuild/: IgeMacMenuGlobal.cs  Info.plist  Makefile  monodoc  monodoc.icns
docbrowser/theme-icons/: Makefile.am
gendarme/: .gitignore  AUTHORS  AssemblyInfo.cs.in  AssemblyStaticInfo.cs  ChangeLog  MIT.X11  Makefile.am  NEWS  README  README.vsnet  TODO  autogen.sh  configure.ac  gd2i.in  gendarme-win.sln  gendarme-wizard.desktop  gendarme-wizard.in  gendarme.in  gendarme.mds  gendarme.sln  mono-options.ignore  options.make  self-test.ignore  unit-test.list
gendarme/Tests.Gendarme/: Tests.Gendarme.csproj  XmlTextEncoderTest.cs
gendarme/console/: .gitignore  ChangeLog  ConsoleRunner.cs  Helpers.cs  HtmlResultWriter.cs  IResultWriter.cs  IgnoreFileList.cs  Makefile.am  Options.cs  ResultWriter.cs  Settings.cs  TextResultWriter.cs  XmlResultWriter.cs  console.mdp  gendarme.csproj  gendarme.exe.config.in  gendarme.xsd  gendarme.xsl  packages.config
gendarme/framework/: .gitignore  AssemblyManager.cs  ChangeLog  Gendarme.Framework.csproj  IRule.cs  Location.cs  Makefile.am  Message.cs  MessageCollection.cs  MessageType.cs  MinimalRunner.cs  RuleCollection.cs  RuleInformation.cs  RuleInformationManager.cs  Rules.cs  Runner.cs  Violation.cs  Violations.cs  framework.mdp  gendarme-framework.pc.in
gendarme/man/: .gitignore  ChangeLog  Makefile.am  gd2i.1.in  gendarme.1.in  gendarme.5.in  gendarme.config  gendarme.source
gendarme/rules/: ChangeLog  Makefile.am  README.md  common.make  rules.md-nunit  rules.mds  rules.xml  tests.mds
gendarme/swf-wizard-runner/: .gitignore  ChangeLog  Gendarme.cs  GuiRunner.cs  Makefile.am  Page.cs  Wizard.Designer.cs  Wizard.cs  Wizard.resx  gendarme-wizard.desktop.in  swf-wizard-runner.csproj  swf-wizard-runner.mdp
gendarme/tools/: Makefile.am  README
gendarme/win32-setup/: ChangeLog  Makefile.am  win32-setup.vdproj
gendarme/wix/: ChangeLog  Makefile.am  (+3 more)
gsharp/: .gitignore  AssemblyInfo.cs  ChangeLog  DescribeType.cs  History.cs  InteractiveGraphicsBase.cs  Main.cs  MainWindow.cs  Makefile.am  Mono.CSharp.Gui.csproj  ProcessSelector.cs  Shell.cs  SysDrawing.cs  TypeView.cs  gsharp.desktop.in  gsharp.in  gsharp.sln  outline.cs
gui-compare/: AssemblyResolver.cs  CecilMetadata.cs  ChangeLog  CompareContext.cs  CompareWindow.cs  Comparison.cs  Config.cs  CustomCompare.cs  InfoManager.cs  Main.cs  MainWindow.cs  Makefile  Makefile.am  Makefile.include  MasterMetadata.cs  Masterinfo.cs  Masterinfos.cs  Metadata.cs  ProviderSelector.cs  config.make  configure  driver.cs  gui-compare.csproj  gui-compare.in  gui-compare.make  gui-compare.mdp  gui-compare.mds
ilcontrast/: .gitignore  Application.cs  ChangeLog  ComparisonInfo.cs  Global.cs.in  Makefile.am  Window.cs  deploy.tar  ilcontrast.desktop.in  ilcontrast.in  mono-api-diff.cs  mono-api-info.cs
minvoke/: .gitignore  Makefile  Makefile.am  MapAssembly.cs  MapDllImportAttribute.cs  RetargetAssembly.cs  minvoke.cs  minvoke.in
monodoc-browser/: ChangeLog  Contributions.cs  Makefile.am  admin.cs  browser.cs
mperfmon/: .gitignore  AddSet.cs  AssemblyInfo.cs  ChangeLog  Config.cs  Main.cs  MainWindow.cs  Makefile.am  NewCounter.cs  Preferences.cs  config  mperfmon.1  mperfmon.in
webdoc/: .gitignore  Changelog  Global.asax  Makefile.am  README.md  TODO  api.master  common.css  common.js  fullsearch.js  header.aspx  header.html  index.aspx  index.html  login.aspx  main.css  make-index.cs  monodoc.ashx  monodoc.asmx  monodoc.css  oldposts.xml  plugins.def  search.html  search.js  server.cs  sidebar.css  sidebar.js  tables.sql  web.config
(+1393 files in other folders)
